[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ligandfixer"
version = "0.2.0"
description = "Repair and normalize ligand structure files for docking pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "LigandFixer Contributors" }
]
keywords = [
    "cheminformatics", "docking", "ligand", "rdkit",
    "mol2", "pdbqt", "sdf", "structure repair"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "rdkit>=2022.03",
]

[project.optional-dependencies]
ob = ["openbabel-wheel>=3.1"]   # enables MOL2 + PDBQT output
dev = ["pytest", "openbabel-wheel>=3.1"]

[project.scripts]
ligandfix = "ligandfixer.cli:main"

[project.urls]
Repository = "https://github.com/your-org/ligandfixer"
Issues     = "https://github.com/your-org/ligandfixer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ligandfixer*"]
